--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+/* 각 폰트 파일 import */
+/* notosans */
+@font-face {
+  font-family: "Noto Sans KR";
+  src: url("assets/fonts/NotoSansKR/NotoSansKR-Thin.ttf") format("ttf");
+  font-weight: 100;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: url("assets/fonts/NotoSansKR/NotoSansKR-ExtraLight.ttf") format("ttf");
+  font-weight: 200;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: url("assets/fonts/NotoSansKR/NotoSansKR-Light.ttf") format("ttf");
+  font-weight: 300;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: url("assets/fonts/NotoSansKR/NotoSansKR-Regular.ttf") format("ttf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: url("assets/fonts/NotoSansKR/NotoSansKR-Medium.ttf") format("ttf");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: url("assets/fonts/NotoSansKR/NotoSansKR-SemiBold.ttf") format("ttf");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: url("assets/fonts/NotoSansKR/NotoSansKR-Bold.ttf") format("ttf");
+  font-weight: 700;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* pretendard */
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-Thin.woff") format("woff");
+  font-weight: 100;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-ExtraLight.woff") format("woff");
+  font-weight: 200;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-Light.woff") format("woff");
+  font-weight: 300;
 }
-
-.App-link {
-  color: #61dafb;
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-Regular.woff") format("woff");
+  font-weight: 400;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-Medium.woff") format("woff");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-SemiBold.woff") format("woff");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-Bold.woff") format("woff");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-ExtraBold.woff") format("woff");
+  font-weight: 800;
+}
+@font-face {
+  font-family: "Pretendard";
+  src: url("assets/fonts/Pretendard/Pretendard-Black.woff") format("woff");
+  font-weight: 900;
 }
